# AgenticTrading

./: .env  .gitignore  1_agentic_trader.ipynb  2_agentic_trading.ipynb  CLAUDE.md  GOALS.md  SPEC_V2.md  app.py  dashboard.py  main.py  project_prompt.ipynb  pyproject.toml  tools.py
.ipynb_checkpoints/: 2_agentic_trading-checkpoint.ipynb
config/: settings.py
dashboard_utils/: components.py  data_layer.py  market_scanner.py
trading/: admin.py  config.py  models.py
trading/agents/: planner.py
trading/graph/: state.py  trading_graph.py
trading/intraday/: __init__.py  agent.py  level_bounce.py  level_retest.py  levels.py  monitor.py  prompts.py  regime.py  scanner.py  state.py  structures.py  sweet_spot.py  trade_manager.py  universe.py  vwap_fade.py
trading/management/commands/: manage_straddle.py  run_backtest.py  run_backtest_intraday.py  run_intraday.py  run_screener.py  run_straddle_monitor.py  run_trading_agent.py  run_trading_day.py
trading/migrations/: 0001_initial.py  0002_alter_strategydoc_category.py  0003_straddle_position.py  0004_systemcontrol_tradernote.py  0005_add_watchlist_entry.py  0006_add_realized_pnl.py
trading/options/: CLAUDE.md  __init__.py  adaptive.py  data_service.py
trading/options/straddle/: __init__.py  analyzer.py  graph.py  lifecycle.py  prompts.py  state.py
trading/rag/: retriever.py
trading/services/: backtester.py  broker_service.py  data_service.py  intraday_backtester.py  risk_engine.py  ticker_service.py  walk_forward.py
trading/utils/: costs.py  expiry_utils.py  indicators.py  pnl_utils.py  time_utils.py
