[project]
name = "agentictrading"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=0.3.27",
    "langchain-community>=0.4",
    "langchain-groq>=1.0.0",
    "langchain-ollama>=1.0.0",
    "langgraph>=0.6.11",
    "langsmith>=0.4.37",
    "matplotlib>=3.10.7",
    "mplfinance>=0.12.10b0",
    "notebook>=7.4.7",
    "ollama>=0.6.0",
    "pandas>=2.3.3",
    "python-dateutil>=2.9.0.post0",
    "python-dotenv>=1.1.1",
    "smartapi-python>=1.5.5",
    "streamlit>=1.51.0",
]
